[metadata]
name = stark-package
author = Jayshil A. Patel, Alexis Brandeker, Gayathri Viswanath, Maria Cavallius, Markus Janson
author_email = jayshil.patel@astro.su.se
license = Apache Software License 2.0
license_file = licenses/LICENSE.rst
url = https://github.com/Jayshil/stark
description = Spectral exTraction And Reduction Kit
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = 
    numpy
    astropy
    scipy
    tqdm
    scikit-image


[options.extras_require]
all =
    numpy
    astropy
    scipy
    tqdm
    scikit-image
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    sphinx-astropy

[tool:pytest]
testpaths = "stark" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  stark/__init*
  stark/conftest.py
  stark/*setup_package*
  stark/tests/*
  stark/*/tests/*
  stark/extern/*
  stark/version*
  */stark/__init*
  */stark/conftest.py
  */stark/*setup_package*
  */stark/tests/*
  */stark/*/tests/*
  */stark/extern/*
  */stark/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
